<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ecal</name>
    <version>5.13.0</version>
    <description>eCAL - enhanced Communication Abstraction Layer. A fast publish-subscribe cross-plattform middleware using Shared Memory and UDP.</description>
    <maintainer email="ecal-dev@eclipse.org">Eclipse Foundation, Inc.</maintainer>
    <license>Apache 2.0</license>

    <url type="website">https://eclipse-ecal.github.io/ecal</url>
    <url type="bugtracker">https://github.com/eclipse-ecal/ecal/issues</url>
    <url type="repository">https://github.com/eclipse-ecal/ecal</url>

    <buildtool_depend>cmake</buildtool_depend>

    <depend>protobuf-dev</depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>
