[project] # Project metadata
name = "eclipse-ecal"
readme = "README.md"
requires-python = ">=3.7"
license = { "file" = "LICENSE.txt" }
authors = [
  { "name" = "Kerstin Keller", "email" = "kerstin.keller@continental.com" },
]
keywords = ["DDS", "Middlware"]
classifiers = ["Topic :: Scientific/Engineering"]
dependencies = ["protobuf >= 3.8, == 3.*"]
# setuptools-scm will grab the version from the latest git tag
dynamic = ["version"]

[project.urls]
"Documentation" = "https://eclipse-ecal.github.io/ecal"
"Source" = "https://github.com/eclipse-ecal/ecal"

[build-system] # How pip and other frontends should build this project
# Version 8 of setuptools_scm drops Python 3.7
requires = ["scikit-build-core>=0.8", "setuptools_scm~=7.1"]
build-backend = "scikit_build_core.build"

[tool.setuptools_scm]
write_to = "lang/python/core/ecal/_version.py"

[tool.scikit-build]
# Setuptools-scm to provide the package version from git
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
# Will be installed from PyPI if system version is too old/missing
cmake.version = ">=3.18"
cmake.targets = ["ecal_python"] # Targets to build
build-dir = "./_python_build"   # Build directory for unisolated builds
install.components = ["python"] # CMake component to install
# Directory structure to copy as Python package, last path component is
# the package name
wheel.packages = ["lang/python/core/ecal", "lang/python/ecalhdf5/ecal"]

# Files to include in the source archive to build from
sdist.exclude = ["*"]
sdist.include = [
  "/CMakeLists.txt",
  "/pyproject.toml",
  "/LICENSE.txt",
  "/NOTICE.txt",
  "/README.md",
  "/app/app_pb/",
  "/app/apps/",            # TODO: Remove this directory
  "/app/rec/rec_addon_*/", # TODO: Remove this directory
  "/cmake/",
  "/contrib/",
  "/cpack/",
  "/ecal/core/",
  "/ecal/service/",
  "/ecal/CMakeLists.txt",
  "/lib/",
  "/licenses/",
  "lang/python/",

  "thirdparty/cmakefunctions/",
  "thirdparty/protobuf/",
  "thirdparty/recycle/",
  "thirdparty/simpleini/",
  "thirdparty/tclap/",
  "thirdparty/tcp_pubsub/",

  "thirdparty/asio/",
  "!thirdparty/asio/asio/asio/src/",

  # HDF5 has a lot of stuff we don't use
  "/thirdparty/hdf5/",
  "!/thirdparty/hdf5/hdf5/tools/",
  "!/thirdparty/hdf5/hdf5/**/test*/",
  "!/thirdparty/hdf5/hdf5/**/examples*/",
  "!/thirdparty/hdf5/hdf5/hl/",
  "!/thirdparty/hdf5/hdf5/doxygen/",
  "!/thirdparty/hdf5/hdf5/java/",
  "!/thirdparty/hdf5/hdf5/fortran/",

]

[tool.scikit-build.cmake.define]
CMAKE_PROJECT_TOP_LEVEL_INCLUDES = "cmake/submodule_dependencies.cmake"
HAS_HDF5 = "ON"
HAS_QT = "OFF"
HAS_CURL = "OFF"
HAS_FTXUI = "OFF"
BUILD_APPS = "OFF"
BUILD_SAMPLES = "OFF"
BUILD_TIME = "OFF"
BUILD_PY_BINDING = "ON"
BUILD_SHARED_LIBS = "OFF"
ECAL_INSTALL_SAMPLE_SOURCES = "OFF"
ECAL_THIRDPARTY_BUILD_CMAKE_FUNCTIONS = "ON"
ECAL_THIRDPARTY_BUILD_TCP_PUBSUB = "ON"
ECAL_THIRDPARTY_BUILD_RECYCLE = "ON"
ECAL_THIRDPARTY_BUILD_PROTOBUF = "ON"
ECAL_THIRDPARTY_BUILD_FINEFTP = "OFF"
ECAL_THIRDPARTY_BUILD_FTXUI = "OFF"
ECAL_THIRDPARTY_BUILD_SPDLOG = "OFF"
ECAL_THIRDPARTY_BUILD_TERMCOLOR = "OFF"
ECAL_THIRDPARTY_BUILD_TINYXML2 = "OFF"
ECAL_THIRDPARTY_BUILD_YAML-CPP = "ON"
ECAL_THIRDPARTY_BUILD_CURL = "OFF"
ECAL_THIRDPARTY_BUILD_HDF5 = "ON"
# Stop HDF5 trying to export eCALCoreTargets due to the hack
# with HDF5_EXPORTED_TARGETS
HDF5_EXTERNALLY_CONFIGURED = "ON"

[tool.cibuildwheel]
# Only support 64-bit builds for now as CMake gets confused when the
# architecture changes and causes link errors with Python
archs = ["auto64"]
# eCAL has build errors on musl libc
skip = [ "*-musllinux*" ]
